PythonParser.py
# Generated from PythonParser.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class PythonParser ( Parser ):

    grammarFileName = "PythonParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'+'", "'-'", "'*'", "'/'", "'//'", "'%'", 
                     "'**'", "'=='", "'!='", "'<'", "'<='", "'>'", "'>='", 
                     "'and'", "'or'", "'not'", "'='", "'+='", "'-='", "'*='", 
                     "'/='", "'//='", "'%='", "'**='", "'('", "')'", "<INVALID>", 
                     "','", "'\"'", "'''", "':'", "'if'", "'elif'", "'else'", 
                     "'while'", "'for'", "'def'", "'try'", "'except'", "'finally'", 
                     "'with'", "'int'", "'float'", "'str'", "'bool'", "'list'", 
                     "'dict'", "'tuple'", "'None'", "'True'", "'False'", 
                     "'print'", "'input'", "'len'", "'import'", "'from'", 
                     "'as'", "'in'", "'is'", "'return'", "'break'", "'continue'", 
                     "'pass'", "'global'" ]

    symbolicNames = [ "<INVALID>", "PLUS", "MINUS", "MULT", "DIV", "FLOOR_DIV", 
                      "MOD", "EXP", "EQ", "NEQ", "LT", "LTE", "GT", "GTE", 
                      "AND", "OR", "NOT", "ASSIGN", "ADD_ASSIGN", "SUB_ASSIGN", 
                      "MUL_ASSIGN", "DIV_ASSIGN", "FLOOR_DIV_ASSIGN", "MOD_ASSIGN", 
                      "EXP_ASSIGN", "LPAREN", "RPAREN", "NEWLINE", "COMMA", 
                      "QUOTE", "SINGLE_QUOTE", "COLON", "IF", "ELIF", "ELSE", 
                      "WHILE", "FOR", "DEF", "TRY", "EXCEPT", "FINALLY", 
                      "WITH", "INT", "FLOAT", "STRING", "BOOL", "LIST", 
                      "DICT", "TUPLE", "NONE", "TRUE", "FALSE", "PRINT", 
                      "INPUT", "LEN", "IMPORT", "FROM", "AS", "IN", "IS", 
                      "RETURN", "BREAK", "CONTINUE", "PASS", "GLOBAL", "ID", 
                      "LETTER", "NUMBER", "WS" ]

    RULE_code = 0
    RULE_stat = 1
    RULE_expr = 2
    RULE_term = 3
    RULE_factor = 4
    RULE_base = 5
    RULE_ids = 6
    RULE_stringliteral = 7
    RULE_numeros = 8
    RULE_query = 9
    RULE_booleans = 10
    RULE_assignment = 11
    RULE_condicional = 12
    RULE_func = 13
    RULE_func_call = 14
    RULE_args_list = 15
    RULE_param_list = 16
    RULE_param = 17
    RULE_types = 18
    RULE_return_stmt = 19
    RULE_loop_while = 20
    RULE_loop_for = 21

    ruleNames =  [ "code", "stat", "expr", "term", "factor", "base", "ids", 
                   "stringliteral", "numeros", "query", "booleans", "assignment", 
                   "condicional", "func", "func_call", "args_list", "param_list", 
                   "param", "types", "return_stmt", "loop_while", "loop_for" ]

    EOF = Token.EOF
    PLUS=1
    MINUS=2
    MULT=3
    DIV=4
    FLOOR_DIV=5
    MOD=6
    EXP=7
    EQ=8
    NEQ=9
    LT=10
    LTE=11
    GT=12
    GTE=13
    AND=14
    OR=15
    NOT=16
    ASSIGN=17
    ADD_ASSIGN=18
    SUB_ASSIGN=19
    MUL_ASSIGN=20
    DIV_ASSIGN=21
    FLOOR_DIV_ASSIGN=22
    MOD_ASSIGN=23
    EXP_ASSIGN=24
    LPAREN=25
    RPAREN=26
    NEWLINE=27
    COMMA=28
    QUOTE=29
    SINGLE_QUOTE=30
    COLON=31
    IF=32
    ELIF=33
    ELSE=34
    WHILE=35
    FOR=36
    DEF=37
    TRY=38
    EXCEPT=39
    FINALLY=40
    WITH=41
    INT=42
    FLOAT=43
    STRING=44
    BOOL=45
    LIST=46
    DICT=47
    TUPLE=48
    NONE=49
    TRUE=50
    FALSE=51
    PRINT=52
    INPUT=53
    LEN=54
    IMPORT=55
    FROM=56
    AS=57
    IN=58
    IS=59
    RETURN=60
    BREAK=61
    CONTINUE=62
    PASS=63
    GLOBAL=64
    ID=65
    LETTER=66
    NUMBER=67
    WS=68

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class CodeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def func(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PythonParser.FuncContext)
            else:
                return self.getTypedRuleContext(PythonParser.FuncContext,i)


        def condicional(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PythonParser.CondicionalContext)
            else:
                return self.getTypedRuleContext(PythonParser.CondicionalContext,i)


        def loop_while(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PythonParser.Loop_whileContext)
            else:
                return self.getTypedRuleContext(PythonParser.Loop_whileContext,i)


        def loop_for(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PythonParser.Loop_forContext)
            else:
                return self.getTypedRuleContext(PythonParser.Loop_forContext,i)


        def func_call(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PythonParser.Func_callContext)
            else:
                return self.getTypedRuleContext(PythonParser.Func_callContext,i)


        def stat(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PythonParser.StatContext)
            else:
                return self.getTypedRuleContext(PythonParser.StatContext,i)


        def EOF(self):
            return self.getToken(PythonParser.EOF, 0)

        def getRuleIndex(self):
            return PythonParser.RULE_code

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCode" ):
                return visitor.visitCode(self)
            else:
                return visitor.visitChildren(self)




    def code(self):

        localctx = PythonParser.CodeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_code)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 52
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 3377946177896452) != 0) or _la==65 or _la==67:
                self.state = 50
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
                if la_ == 1:
                    self.state = 44
                    self.func()
                    pass

                elif la_ == 2:
                    self.state = 45
                    self.condicional()
                    pass

                elif la_ == 3:
                    self.state = 46
                    self.loop_while()
                    pass

                elif la_ == 4:
                    self.state = 47
                    self.loop_for()
                    pass

                elif la_ == 5:
                    self.state = 48
                    self.func_call()
                    pass

                elif la_ == 6:
                    self.state = 49
                    self.stat()
                    pass


                self.state = 54
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 56
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.state = 55
                self.match(PythonParser.EOF)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(PythonParser.ExprContext,0)


        def query(self):
            return self.getTypedRuleContext(PythonParser.QueryContext,0)


        def assignment(self):
            return self.getTypedRuleContext(PythonParser.AssignmentContext,0)


        def NEWLINE(self):
            return self.getToken(PythonParser.NEWLINE, 0)

        def EOF(self):
            return self.getToken(PythonParser.EOF, 0)

        def getRuleIndex(self):
            return PythonParser.RULE_stat

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStat" ):
                return visitor.visitStat(self)
            else:
                return visitor.visitChildren(self)




    def stat(self):

        localctx = PythonParser.StatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_stat)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 61
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.state = 58
                self.expr(0)
                pass

            elif la_ == 2:
                self.state = 59
                self.query(0)
                pass

            elif la_ == 3:
                self.state = 60
                self.assignment()
                pass


            self.state = 67
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [27]:
                self.state = 63
                self.match(PythonParser.NEWLINE)
                pass
            elif token in [-1, 2, 16, 25, 29, 30, 32, 33, 34, 35, 36, 37, 50, 51, 60, 65, 67]:
                self.state = 65
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
                if la_ == 1:
                    self.state = 64
                    self.match(PythonParser.EOF)


                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def term(self):
            return self.getTypedRuleContext(PythonParser.TermContext,0)


        def expr(self):
            return self.getTypedRuleContext(PythonParser.ExprContext,0)


        def PLUS(self):
            return self.getToken(PythonParser.PLUS, 0)

        def MINUS(self):
            return self.getToken(PythonParser.MINUS, 0)

        def getRuleIndex(self):
            return PythonParser.RULE_expr

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr" ):
                return visitor.visitExpr(self)
            else:
                return visitor.visitChildren(self)



    def expr(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = PythonParser.ExprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 4
        self.enterRecursionRule(localctx, 4, self.RULE_expr, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 70
            self.term(0)
            self._ctx.stop = self._input.LT(-1)
            self.state = 77
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,6,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = PythonParser.ExprContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                    self.state = 72
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 73
                    _la = self._input.LA(1)
                    if not(_la==1 or _la==2):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()
                    self.state = 74
                    self.term(0) 
                self.state = 79
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,6,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class TermContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def factor(self):
            return self.getTypedRuleContext(PythonParser.FactorContext,0)


        def term(self):
            return self.getTypedRuleContext(PythonParser.TermContext,0)


        def MULT(self):
            return self.getToken(PythonParser.MULT, 0)

        def DIV(self):
            return self.getToken(PythonParser.DIV, 0)

        def FLOOR_DIV(self):
            return self.getToken(PythonParser.FLOOR_DIV, 0)

        def MOD(self):
            return self.getToken(PythonParser.MOD, 0)

        def getRuleIndex(self):
            return PythonParser.RULE_term

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTerm" ):
                return visitor.visitTerm(self)
            else:
                return visitor.visitChildren(self)



    def term(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = PythonParser.TermContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 6
        self.enterRecursionRule(localctx, 6, self.RULE_term, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 81
            self.factor()
            self._ctx.stop = self._input.LT(-1)
            self.state = 88
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,7,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = PythonParser.TermContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_term)
                    self.state = 83
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 84
                    _la = self._input.LA(1)
                    if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 120) != 0)):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()
                    self.state = 85
                    self.factor() 
                self.state = 90
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,7,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class FactorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def base(self):
            return self.getTypedRuleContext(PythonParser.BaseContext,0)


        def EXP(self):
            return self.getToken(PythonParser.EXP, 0)

        def factor(self):
            return self.getTypedRuleContext(PythonParser.FactorContext,0)


        def MINUS(self):
            return self.getToken(PythonParser.MINUS, 0)

        def getRuleIndex(self):
            return PythonParser.RULE_factor

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFactor" ):
                return visitor.visitFactor(self)
            else:
                return visitor.visitChildren(self)




    def factor(self):

        localctx = PythonParser.FactorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_factor)
        try:
            self.state = 98
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 91
                self.base()
                self.state = 92
                self.match(PythonParser.EXP)
                self.state = 93
                self.factor()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 95
                self.match(PythonParser.MINUS)
                self.state = 96
                self.factor()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 97
                self.base()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BaseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LPAREN(self):
            return self.getToken(PythonParser.LPAREN, 0)

        def expr(self):
            return self.getTypedRuleContext(PythonParser.ExprContext,0)


        def RPAREN(self):
            return self.getToken(PythonParser.RPAREN, 0)

        def func_call(self):
            return self.getTypedRuleContext(PythonParser.Func_callContext,0)


        def ids(self):
            return self.getTypedRuleContext(PythonParser.IdsContext,0)


        def numeros(self):
            return self.getTypedRuleContext(PythonParser.NumerosContext,0)


        def stringliteral(self):
            return self.getTypedRuleContext(PythonParser.StringliteralContext,0)


        def getRuleIndex(self):
            return PythonParser.RULE_base

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBase" ):
                return visitor.visitBase(self)
            else:
                return visitor.visitChildren(self)




    def base(self):

        localctx = PythonParser.BaseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_base)
        try:
            self.state = 108
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 100
                self.match(PythonParser.LPAREN)
                self.state = 101
                self.expr(0)
                self.state = 102
                self.match(PythonParser.RPAREN)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 104
                self.func_call()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 105
                self.ids()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 106
                self.numeros()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 107
                self.stringliteral()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(PythonParser.ID, 0)

        def getRuleIndex(self):
            return PythonParser.RULE_ids

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIds" ):
                return visitor.visitIds(self)
            else:
                return visitor.visitChildren(self)




    def ids(self):

        localctx = PythonParser.IdsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_ids)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 110
            self.match(PythonParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StringliteralContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def QUOTE(self, i:int=None):
            if i is None:
                return self.getTokens(PythonParser.QUOTE)
            else:
                return self.getToken(PythonParser.QUOTE, i)

        def ID(self):
            return self.getToken(PythonParser.ID, 0)

        def SINGLE_QUOTE(self, i:int=None):
            if i is None:
                return self.getTokens(PythonParser.SINGLE_QUOTE)
            else:
                return self.getToken(PythonParser.SINGLE_QUOTE, i)

        def getRuleIndex(self):
            return PythonParser.RULE_stringliteral

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStringliteral" ):
                return visitor.visitStringliteral(self)
            else:
                return visitor.visitChildren(self)




    def stringliteral(self):

        localctx = PythonParser.StringliteralContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_stringliteral)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [29]:
                self.state = 112
                self.match(PythonParser.QUOTE)
                self.state = 113
                self.match(PythonParser.ID)
                self.state = 114
                self.match(PythonParser.QUOTE)
                pass
            elif token in [30]:
                self.state = 115
                self.match(PythonParser.SINGLE_QUOTE)
                self.state = 116
                self.match(PythonParser.ID)
                self.state = 117
                self.match(PythonParser.SINGLE_QUOTE)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NumerosContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUMBER(self):
            return self.getToken(PythonParser.NUMBER, 0)

        def getRuleIndex(self):
            return PythonParser.RULE_numeros

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNumeros" ):
                return visitor.visitNumeros(self)
            else:
                return visitor.visitChildren(self)




    def numeros(self):

        localctx = PythonParser.NumerosContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_numeros)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            self.match(PythonParser.NUMBER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class QueryContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def booleans(self):
            return self.getTypedRuleContext(PythonParser.BooleansContext,0)


        def NOT(self):
            return self.getToken(PythonParser.NOT, 0)

        def query(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PythonParser.QueryContext)
            else:
                return self.getTypedRuleContext(PythonParser.QueryContext,i)


        def LPAREN(self):
            return self.getToken(PythonParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(PythonParser.RPAREN, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PythonParser.ExprContext)
            else:
                return self.getTypedRuleContext(PythonParser.ExprContext,i)


        def EQ(self):
            return self.getToken(PythonParser.EQ, 0)

        def NEQ(self):
            return self.getToken(PythonParser.NEQ, 0)

        def LT(self):
            return self.getToken(PythonParser.LT, 0)

        def LTE(self):
            return self.getToken(PythonParser.LTE, 0)

        def GT(self):
            return self.getToken(PythonParser.GT, 0)

        def GTE(self):
            return self.getToken(PythonParser.GTE, 0)

        def func_call(self):
            return self.getTypedRuleContext(PythonParser.Func_callContext,0)


        def AND(self):
            return self.getToken(PythonParser.AND, 0)

        def OR(self):
            return self.getToken(PythonParser.OR, 0)

        def getRuleIndex(self):
            return PythonParser.RULE_query

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitQuery" ):
                return visitor.visitQuery(self)
            else:
                return visitor.visitChildren(self)



    def query(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = PythonParser.QueryContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 18
        self.enterRecursionRule(localctx, 18, self.RULE_query, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 135
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                self.state = 123
                self.booleans()
                pass

            elif la_ == 2:
                self.state = 124
                self.match(PythonParser.NOT)
                self.state = 125
                self.query(4)
                pass

            elif la_ == 3:
                self.state = 126
                self.match(PythonParser.LPAREN)
                self.state = 127
                self.query(0)
                self.state = 128
                self.match(PythonParser.RPAREN)
                pass

            elif la_ == 4:
                self.state = 130
                self.expr(0)
                self.state = 131
                _la = self._input.LA(1)
                if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 16128) != 0)):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 132
                self.expr(0)
                pass

            elif la_ == 5:
                self.state = 134
                self.func_call()
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 142
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,12,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = PythonParser.QueryContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_query)
                    self.state = 137
                    if not self.precpred(self._ctx, 5):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 5)")
                    self.state = 138
                    _la = self._input.LA(1)
                    if not(_la==14 or _la==15):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()
                    self.state = 139
                    self.query(6) 
                self.state = 144
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,12,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class BooleansContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TRUE(self):
            return self.getToken(PythonParser.TRUE, 0)

        def FALSE(self):
            return self.getToken(PythonParser.FALSE, 0)

        def getRuleIndex(self):
            return PythonParser.RULE_booleans

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBooleans" ):
                return visitor.visitBooleans(self)
            else:
                return visitor.visitChildren(self)




    def booleans(self):

        localctx = PythonParser.BooleansContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_booleans)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 145
            _la = self._input.LA(1)
            if not(_la==50 or _la==51):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(PythonParser.ID, 0)

        def ASSIGN(self):
            return self.getToken(PythonParser.ASSIGN, 0)

        def ADD_ASSIGN(self):
            return self.getToken(PythonParser.ADD_ASSIGN, 0)

        def SUB_ASSIGN(self):
            return self.getToken(PythonParser.SUB_ASSIGN, 0)

        def MUL_ASSIGN(self):
            return self.getToken(PythonParser.MUL_ASSIGN, 0)

        def DIV_ASSIGN(self):
            return self.getToken(PythonParser.DIV_ASSIGN, 0)

        def FLOOR_DIV_ASSIGN(self):
            return self.getToken(PythonParser.FLOOR_DIV_ASSIGN, 0)

        def MOD_ASSIGN(self):
            return self.getToken(PythonParser.MOD_ASSIGN, 0)

        def EXP_ASSIGN(self):
            return self.getToken(PythonParser.EXP_ASSIGN, 0)

        def expr(self):
            return self.getTypedRuleContext(PythonParser.ExprContext,0)


        def query(self):
            return self.getTypedRuleContext(PythonParser.QueryContext,0)


        def getRuleIndex(self):
            return PythonParser.RULE_assignment

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignment" ):
                return visitor.visitAssignment(self)
            else:
                return visitor.visitChildren(self)




    def assignment(self):

        localctx = PythonParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_assignment)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 147
            self.match(PythonParser.ID)
            self.state = 148
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 33423360) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 151
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,13,self._ctx)
            if la_ == 1:
                self.state = 149
                self.expr(0)
                pass

            elif la_ == 2:
                self.state = 150
                self.query(0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CondicionalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(PythonParser.IF, 0)

        def query(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PythonParser.QueryContext)
            else:
                return self.getTypedRuleContext(PythonParser.QueryContext,i)


        def COLON(self, i:int=None):
            if i is None:
                return self.getTokens(PythonParser.COLON)
            else:
                return self.getToken(PythonParser.COLON, i)

        def stat(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PythonParser.StatContext)
            else:
                return self.getTypedRuleContext(PythonParser.StatContext,i)

